--- a/group.html
+++ b/group.html
@@ -12,6 +12,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+
 
   <!-- Optional JavaScript; choose one of the two! -->
 
@@ -110,8 +112,7 @@
             </a>
           </div>
         </div>
-        <p class="pt-3"
-          style="color:rgb(0,0,0)">Prof. Sonjoy Majumder is a distinguished theoretical physicist and currently serves as a professor in the Department of Physics at the Indian Institute of Technology Kharagpur (IIT KGP). He earned his Ph.D. in Physics from the Indian Institute of Astrophysics (IIA) in Bangalore and completed postdoctoral fellowships at the Harish-Chandra Research Institute in Allahabad, the Technical University of Munich in Germany, and the Institute for Nano-Technology at FZK in Germany.
+        <p class="pt-3">Prof. Sonjoy Majumder is a distinguished theoretical physicist and currently serves as a professor in the Department of Physics at the Indian Institute of Technology Kharagpur (IIT KGP). He earned his Ph.D. in Physics from the Indian Institute of Astrophysics (IIA) in Bangalore and completed postdoctoral fellowships at the Harish-Chandra Research Institute in Allahabad, the Technical University of Munich in Germany, and the Institute for Nano-Technology at FZK in Germany.
 Prof. Majumder's research interests lie in the theoretical investigation of condensed matter systems, including Bose-Einstein condensates (BECs), ultracold atoms, topological phases of matter, and quantum information processing. His numerous publications in prestigious scientific journals attest to his profound contributions to the field of theoretical physics.</p>
 
 
@@ -143,49 +144,71 @@ Prof. Majumder's research interests lie in the theoretical investigation of cond
     </div>
   </section>
 
-  <footer class="bg-dark text-light pt-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="text-center">
+<footer class="bg-dark text-light pt-4 pb-3">
+  <div class="container">
+    <div class="row g-4 text-center">
 
-            <h5>Contact Us</h5>
-            <p>Email: smlab.phy@gmail.com<br>
-              Phone: 83808</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="text-center">
+      <!-- Contact -->
+      <div class="col-md-4">
+        <h5 class="fw-bold">Contact Us</h5>
+        <p class="mb-1">sonjoym@phy.iitkgp.ac.in</p>
+        <p class="mb-2">Phone: 83808</p>
 
-            <div class="copyright">
-              <strong><span>Atoms, Molecules & Quantum Information Group</span></strong>
-            </div>
-            <div class="credits">
-              Designed by <a> <strong>Subrata and Soumya</strong></a><br>
-              <!-- <link href="assets/img/mypic.png" rel="apple-touch-icon"> -->
-              <!-- <img src="assets/img/mypic.png" class="img-rounded" style="width: 70px;"> -->
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="text-center">
-            <h5>Address</h5>
-            <p>Atomic and Molecular Physics Lab<br>
-              C-136,
-              Department of Physics<br>
-              IIT Kharagpur</p>
-          </div>
-        </div>
+        <div class="d-flex justify-content-center align-items-center gap-3 mt-2">
+          <span class="fw-bold small">Follow us</span>
 
-        <!-- <div class="col-md-4">
-          <h5>Map</h5>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230.6814503274609!2d87.31093432894353!3d22.319500197661732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1d4404c5c2d88d%3A0x200987d62ee24538!2sDepartment%20Of%20Physics!5e0!3m2!1sen!2sin!4v1678198616089!5m2!1sen!2sin" width="150" height="150" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <a href="https://www.linkedin.com/company/amqi-lab/" 
+             target="_blank" rel="noopener" 
+             class="social-icon" title="LinkedIn">
+            <i class="bi bi-linkedin"></i>
+          </a>
+
+          <a href="mailto:sonjoym@phy.iitkgp.ac.in" 
+             class="social-icon" title="Email">
+            <i class="bi bi-envelope-fill"></i>
+          </a>
+
+          <!-- <a href="https://www.youtube.com/@amqilab" 
+            target="_blank" rel="noopener"
+            class="social-icon" title="YouTube Channel">
+            <i class="bi bi-youtube"></i>
+          </a> -->
+
+
         </div>
       </div>
-      <hr> -->
+
+      <!-- Branding -->
+      <div class="col-md-4">
+        <h6 class="fw-bold mb-1">Atoms, Molecules & Quantum Information Group</h6>
+        <p class="small opacity-75 mb-2">
+          Department of Physics, Indian Institute of Technology Kharagpur
+        </p>
+
+        <p class="small mt-3 mb-0 opacity-75">
+          Designed by <strong>Subrata & Soumya</strong>
+        </p>
       </div>
 
-  </footer>
+      <!-- Address -->
+      <div class="col-md-4">
+        <h5 class="fw-bold">Address</h5>
+        <p class="mb-0 small">
+          Atomic & Molecular Physics Lab<br>
+          C-136, Department of Physics<br>
+          IIT Kharagpur, West Bengal, India
+        </p>
+      </div>
+
+    </div>
+
+    <hr class="border-secondary my-3">
+
+    <p class="text-center small opacity-50 mb-0">
+      © 2025 AMQI Lab — All Rights Reserved
+    </p>
+  </div>
+</footer>
 
 </body>
 
@@ -294,6 +317,9 @@ Prof. Majumder's research interests lie in the theoretical investigation of cond
       }
       if (typeof data[i].webpage != 'undefined') {
         weblink += `<a href=${data[i].webpage}><img src="assets/icons/web.png" width="25" height="25"></img></a>`
+      }
+      if (typeof data[i].linkedin != 'undefined') {
+        weblink += `<a href=${data[i].linkedin}><img src="assets/icons/linkedin.webp" width="25" height="25"></img></a>`
       }
 
       var d1 = new Date(data[i].dateOfStart)
