Add SM profile links to Google Scholar and ResearchGate
Added profile links for Google Scholar and ResearchGate.

--- a/group.html
+++ b/group.html
@@ -110,6 +110,22 @@
               <i class="bi bi-envelope-fill me-2"></i>
               sonjoym@phy.iitkgp.ac.in
             </a>
+            <!-- Profile Links -->
+  <div class="d-flex justify-content-center gap-3 mt-2">
+
+    <!-- Google Scholar -->
+    <a href="https://scholar.google.com/citations?user=EQMenpkAAAAJ&hl=en"
+       target="_blank" title="Google Scholar">
+      <img src="assets/icons/Google_Scholar_logo.svg" width="26" height="26">
+    </a>
+
+    <!-- ResearchGate -->
+    <a href="https://www.researchgate.net/profile/Sonjoy-Majumder-2"
+       target="_blank" title="ResearchGate">
+      <img src="assets/icons/ResearchGate.svg" width="26" height="26">
+    </a>
+
+  </div>
           </div>
         </div>
         <p class="pt-3">Prof. Sonjoy Majumder is a distinguished theoretical physicist and currently serves as a professor in the Department of Physics at the Indian Institute of Technology Kharagpur (IIT KGP). He earned his Ph.D. in Physics from the Indian Institute of Astrophysics (IIA) in Bangalore and completed postdoctoral fellowships at the Harish-Chandra Research Institute in Allahabad, the Technical University of Munich in Germany, and the Institute for Nano-Technology at FZK in Germany.
