Update professor title

--- a/group.html
+++ b/group.html
@@ -101,7 +101,7 @@
         <div class="col-lg-4 col-sm align-self-center">
           <div class="text-center">
             <h4 class="text-dark">Sonjoy Majumder</h4>
-            <p style="color:rgb(137, 137, 137)">Professor, Physics</p>
+            <p style="color:rgb(137, 137, 137)">Professor, Department of Physics, Indian Institute of Technology Kharagpur</p>
             <a
               href="mailto:sonjoym@phy.iitkgp.ac.in"
               class="text-muted text-decoration-none d-inline-block mb-3"
