Update gallery.html bugs

--- a/gallery.html
+++ b/gallery.html
@@ -252,12 +252,12 @@ let images = [
   { src: "Gallery/Rohit_3.jpg", title: "Synopsis Seminar", desc: "\'Finite-Dimensional Quantum Systems under the Fourth Law of Thermodynamics\'", tag: "seminar", date: "2021-03-01" }, 
   { src: "Gallery/rsday_1.jpg", title: "", desc: "", tag: "conference", date: "2021-03-01" }, 
   { src: "Gallery/RSS.jpg", title: "", desc: "", tag: "misc", date: "2021-03-01" }, 
-  { src: "Gallery/SM_home_1.jpg", title: "", desc: "", tag: "misc", date: "2021-03-01" }, 
+  { src: "Gallery/sm_home_1.jpg", title: "", desc: "", tag: "misc", date: "2021-03-01" }, 
   { src: "Gallery/SM_group.jpg", title: "", desc: "", tag: "misc", date: "2021-03-01" }, 
   { src: "Gallery/soumya_badhonnef.jpg", title: "", desc: "", tag: "conference", date: "2021-03-01" }, 
-  { src: "Gallery/soumya_conf_2.jpg", title: "", desc: "", tag: "conference", date: "2021-03-01" }, 
-  // { src: "Gallery/soumya_conf_3.jpg", title: "", desc: "", tag: "conference", date: "2021-03-01" }, 
-  { src: "Gallery/soumya_rsday2.jpg", title: "", desc: "", tag: "conference", date: "2021-03-01" },
+  { src: "Gallery/soumya_conf_2.JPG", title: "", desc: "", tag: "conference", date: "2021-03-01" }, 
+  // { src: "Gallery/soumya_conf_3.JPG", title: "", desc: "", tag: "conference", date: "2021-03-01" }, 
+  { src: "Gallery/Soumya_rsday2.jpg", title: "", desc: "", tag: "conference", date: "2021-03-01" },
   { src: "Gallery/SSH.jpg", title: "", desc: "", tag: "misc", date: "2021-03-01" }, 
   { src: "Gallery/sub_def.jpg", title: "", desc: "", tag: "misc", date: "2021-03-01" }, 
   { src: "Gallery/Sub_def_2.jpg", title: "", desc: "", tag: "seminar", date: "2021-03-01" },
