Update Prof Profile Image
On demand of Prof Updating Profile image

--- a/group.html
+++ b/group.html
@@ -96,12 +96,12 @@
     <div class="container">
       <div class="row justify-content-center align-self-center">
         <div class="col-lg-4 col-sm">
-          <img src="assets/img/SM.png" class=" p-2 img-fluid rounded-circle full-width" alt="...">
+          <img src="assets/img/SM_1.png" class=" p-2 img-fluid rounded-circle full-width" alt="...">
         </div>
         <div class="col-lg-4 col-sm align-self-center">
           <div class="text-center">
             <h4 class="text-dark">Sonjoy Majumder</h4>
-            <p style="color:rgb(137, 137, 137)">Professor, Department of Physics, Indian Institute of Technology Kharagpur</p>
+            <p style="color:rgb(137, 137, 137)">Professor, Department of Physics </br>Indian Institute of Technology Kharagpur</p>
             <a
               href="mailto:sonjoym@phy.iitkgp.ac.in"
               class="text-muted text-decoration-none d-inline-block mb-3"
@@ -167,7 +167,7 @@ Prof. Majumder's research interests lie in the theoretical investigation of cond
       <!-- Contact -->
       <div class="col-md-4">
         <h5 class="fw-bold">Contact Us</h5>
-        <p class="mb-1">sonjoym@phy.iitkgp.ac.in</p>
+        <p class="mb-1">Email: sonjoym@phy.iitkgp.ac.in</p>
         <p class="mb-2">Phone: 83808</p>
 
         <div class="d-flex justify-content-center align-items-center gap-3 mt-2">
@@ -179,10 +179,10 @@ Prof. Majumder's research interests lie in the theoretical investigation of cond
             <i class="bi bi-linkedin"></i>
           </a>
 
-          <a href="mailto:sonjoym@phy.iitkgp.ac.in" 
+          <!-- <a href="mailto:sonjoym@phy.iitkgp.ac.in" 
              class="social-icon" title="Email">
             <i class="bi bi-envelope-fill"></i>
-          </a>
+          </a> -->
 
           <!-- <a href="https://www.youtube.com/@amqilab" 
             target="_blank" rel="noopener"
@@ -196,9 +196,9 @@ Prof. Majumder's research interests lie in the theoretical investigation of cond
 
       <!-- Branding -->
       <div class="col-md-4">
-        <h6 class="fw-bold mb-1">Atoms, Molecules & Quantum Information Group</h6>
+        <h6 class="fw-bold mb-1">Atomic, Molecular & Quantum Information Group</h6>
         <p class="small opacity-75 mb-2">
-          Department of Physics, Indian Institute of Technology Kharagpur
+          Department of Physics, IIT Kharagpur
         </p>
 
         <p class="small mt-3 mb-0 opacity-75">
@@ -210,7 +210,7 @@ Prof. Majumder's research interests lie in the theoretical investigation of cond
       <div class="col-md-4">
         <h5 class="fw-bold">Address</h5>
         <p class="mb-0 small">
-          Atomic & Molecular Physics Lab<br>
+          Atomic, Molecular & Quantum Information (AMQI) Lab<br>
           C-136, Department of Physics<br>
           IIT Kharagpur, West Bengal, India
         </p>
